--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-python=3.8
-bson=0.5.10
-flask=2.2.2
-pymongo=3.12.0
-pandas=2.0.3
+click==8.1.7
+dnspython==2.4.2
+Flask==2.2.2
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+nbconvert==6.4.0
+numpy==1.24.4
+pandas==2.0.3
+pymongo==4.5.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+six==1.16.0
+tzdata==2023.3
+Werkzeug==2.3.7
+zipp==3.17.0
